sas-core/main/default/objects/IVR_Request__c/IVR_Request__c.object-meta.xml
<CustomObject>
    <label>IVR Request</label>
    <nameField>
        <displayFormat>IVR-{00000}</displayFormat>
        <label>IVR Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IVR Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>