sas-core/main/default/objects/IVR_Request__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Email, SMS</inlineHelpText>
    <label>Action Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>