sas-core/main/default/objects/IVR_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Request Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>