sas-core/main/default/objects/IVR_Request__c/fields/Voice_Call__c.field-meta.xml
<CustomField>
    <fullName>Voice_Call__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Voice Call</label>
    <referenceTo>VoiceCall</referenceTo>
    <relationshipLabel>IVR Requests</relationshipLabel>
    <relationshipName>IVR_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>